RESOLVED FIXED129632
[iOS WebKit2]: Text fields don't zoom in when focused
https://bugs.webkit.org/show_bug.cgi?id=129632
Summary [iOS WebKit2]: Text fields don't zoom in when focused
Enrica Casucci
Reported 2014-03-03 15:58:35 PST
This can be reproduced with any page that has input elements. <rdar://problem/16185230>
Attachments
Patch (7.91 KB, patch)
2014-03-03 16:01 PST, Enrica Casucci
benjamin: review+
Enrica Casucci
Comment 1 2014-03-03 16:01:40 PST
Benjamin Poulain
Comment 2 2014-03-03 16:23:52 PST
Comment on attachment 225704 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=225704&action=review > Source/WebKit2/Shared/AssistedNodeInformation.h:97 > + : minimumScaleFactor(0.1) > + , maximumScaleFactor(DBL_MAX) Maybe -inf and inf instead? > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:416 > + minimumScrollDistance:0]; The indent is wrong here.
Enrica Casucci
Comment 3 2014-03-03 16:54:35 PST
Committed revision 165022
Note You need to log in before you can comment on or make changes to this bug.