Source/WebKit2/UIProcess/ios/WKContentView.h
@@ -79,6 +79,7 @@ struct WebPageConfiguration;
 - (RetainPtr<CGImageRef>)_takeViewSnapshot;
 - (void)_setAccessibilityWebProcessToken:(NSData *)data;
 
+- (BOOL)_scrollToRect:(CGRect)targetRect withOrigin:(CGPoint)origin minimumScrollDistance:(CGFloat)minimumScrollDistance;
 - (BOOL)_zoomToRect:(CGRect)targetRect withOrigin:(CGPoint)origin fitEntireRect:(BOOL)fitEntireRect minimumScale:(double)minimumScale maximumScale:(double)maximumScale minimumScrollDistance:(CGFloat)minimumScrollDistance;
 - (void)_zoomOutWithOrigin:(CGPoint)origin;
 
