Source/WebKit2/UIProcess/ios/WKContentView.mm
@@ -306,6 +306,11 @@ using namespace WebKit;
     return [_webView _takeViewSnapshot];
 }
 
+- (BOOL)_scrollToRect:(CGRect)targetRect withOrigin:(CGPoint)origin minimumScrollDistance:(CGFloat)minimumScrollDistance
+{
+    return [_webView _scrollToRect:targetRect origin:origin minimumScrollDistance:minimumScrollDistance];
+}
+
 - (BOOL)_zoomToRect:(CGRect)targetRect withOrigin:(CGPoint)origin fitEntireRect:(BOOL)fitEntireRect minimumScale:(double)minimumScale maximumScale:(double)maximumScale minimumScrollDistance:(CGFloat)minimumScrollDistance
 {
     return [_webView _zoomToRect:targetRect withOrigin:origin fitEntireRect:fitEntireRect minimumScale:minimumScale maximumScale:maximumScale minimumScrollDistance:minimumScrollDistance];
